# src/modules/educator/educator.routes.js
@@ -1,6 +1,6 @@
 import express from "express";
 
-import { createEducatorDto } from "#dtos/index.js";
+import { createEducatorDto, updateEducatorDto } from "#dtos/index.js";
 import { validate } from "#middleware/index.js";
 import { upload } from "#middleware/index.js";
 import { educatorControllers } from "./educator.controllers.js";
@@ -11,9 +11,16 @@ educatorRoutes
   .post(
     "/",
     upload,
+    validate.authRole("educator"),
     validate.dto(createEducatorDto),
-    educatorControllers.create,
+    educatorControllers.create
   )
   .get("/", educatorControllers.getAll)
   .get("/:id", educatorControllers.getById)
-  .patch("/:id", upload, educatorControllers.updateById);
+  .patch(
+    "/:id",
+    upload,
+    validate.authRole("educator"),
+    validate.dto(updateEducatorDto),
+    educatorControllers.updateById
+  );
